--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="start_new_travel">새로운 여행 시작하기</string>
+    <string name="text_new_bucket">새로운 할 일을 추가하세요!</string>
+    <string name="bucket_name">할 일</string>
 </resources>
