--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="start_new_travel">새로운 여행 시작하기</string>
     <string name="text_new_bucket">새로운 할 일을 추가하세요!</string>
     <string name="bucket_name">할 일</string>
-    <string name="text_new_plan">새로운 plan을 설정해주십시오</string>
+    <string name="text_new_plan">새로운 계획을 세우세요!</string>
 </resources>
